--- a/CX_4240_project.ipynb
+++ b/CX_4240_project.ipynb
@@ -157,8 +157,11 @@
    "metadata": {},
    "source": [
     "### Unsupervised classification\n",
+    "\n",
+    "#### PCA and KMeans cluster: equal number of each position in each cluster\n",
     "- For the unsupervised classification, we first applied PCA to reduce the dimension of our data and then used KMeans to cluster reduced data. We set the number of clusters to 5 and expect the program will cluster the players in a way similar to the SG/PG/SF/PF/C classification. The PCA reduced the dimension to 3 to a achieved a sum of variance above 0.99, and the first dimension accounts for over 0.9 of the sum of variance. However the classification did not agree with the current five position classification at all. For each cluster, there were almost equal number players from each position, and cluster #2 had most number of players. \n",
     "\n",
+    "#### Number of clusters: converge at 100 clusters\n",
     "- We tried to increase the number of clusters to reduce error in the clustering. However, the result indicated that the error stopped increasing at a cluster number of around 100. Given that there’s only 400 players in the data set, it implies based on the current data, each player has a pretty unique style of play and cannot really be clustered in the same group. \n"
    ]
   },
@@ -167,10 +170,14 @@
    "metadata": {},
    "source": [
     "### Supervised classification\n",
+    "\n",
+    "#### \\~60% accuracy for all 3 methods\n",
     "- Three methods were used to perform the supervised classification: LDA, logistic regression classifier, and random forest classifier. For all three methods, the final accuracy of the prediction is around 0.6. By analyzing the confusion matrix for each method, we believe this is due to the intrinsic ambiguity in the definition of the players’ position. For instance, for year 2016 with logistic regression classifier, the results showed 20% of the PGs are classified as SG and vice versa; and around 40% of the PFs are classified as center (C) and 30% of centers are classified as power forward (PF). Players plays as SG and PG usually covers similar duties on the court and sometimes swap positions to adjust to the situation during the game. From the logistic regression classifier, we saw that almost 50% of the centers in 1997 were classified as PF, while the percentage was only 28% for year 2016. This implies the role of center and power became more differentiated after 20 years. \n",
     "\n",
+    "#### 11-12 features to describe 2017 and 7-8 features to describe 1997\n",
     "- All three algorithms use similar numbers of features to predict the data: between 11 and 12 features 2017 and between 7 and 8 features for 1997. The features that contributes to the increase in the accuracy of the prediction are, rebound%, assist%, steal%, and block%. These features are important indicators on how the players influences the game and are expected as the major features that contributes to improving the accuracy of the prediction. One additional feature that was counted in 2017 is the win share%. This is a high-end statistic that quantifies the player’s contribution to the games the team won in a season. \n",
     "\n",
+    "#### Outlier players analysis\n",
     "- If we looked at the players that were misclassified from the confusion matrix, a few interesting names popped up. First one, of course, is __Giannis Antetokounmpo__, the ‘Greek Freak’ and MVP of the 2018-2019 season. He was assigned to a point guard position while our algorithm classifies him as a SF/PF. Apparently, the program made the right assignment. He’s nearly 7 feet tall, with a combination of size, extraordinary wingspan, speed, and ball-handling skills. All this athleticism, combined with his poor shooting ability, makes it obvious that his position should be either PF/SF. Actually, it is very bizarre that the league assigned him as a PG in the first few seasons of his career. The second big name showed up on the confusion matrix was __Blake Griffin__. Blake started his career as a PF in the Los Angeles Clippers. At the beginning of his career, he was an exceptional athlete which results in numerous highlight dunks. Due to his injuries, which weakened his athleticism, and the changes in the team roster, he developed a lot of guard skills to his game including shooting, ball-handling, and assisting his teammates. Even though year 2016 was only the start of his switching, our program still spotted his change and classifies him as a PG instead of the PF position. \n",
     "\n",
     "<table><tr>\n",
@@ -178,7 +185,7 @@
     "<td> <img src=\"./Blake.jpg\"  style=\"width: 425px;\"/> </td>\n",
     "</tr></table>\n",
     "\n",
-    "\n",
+    "#### Summary\n",
     "- In summary our supervised classification were able to classify the majority of players into their currently assigned position, at 60% accuracy. The mis-assignments were usually due to the intrinsic ambiguity in the definition of the position. While for a few players that was misassigned from the beginning, the program were able to spot them and assign them to their right position. "
    ]
   },
